--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>DISHPLANET</name>
     <description>DISHPLANET</description>
+    <packaging>war</packaging>
     <properties>
         <java.version>17</java.version>
         <webjars.locator.version>0.47</webjars.locator.version>
