--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=DISHPLANET
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://mysqlPlato:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -8,11 +8,14 @@ spring.h2.console.enabled=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+
+uploads.directory=/uploads/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=aqui va un email
-spring.mail.password=aqui va una contraseña de aplicacion generada con la cuenta de correp
+spring.mail.password=aqui va la contraseña para app de terceros
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
