--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ uploads.directory=/uploads/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=aqui va un email
-spring.mail.password=aqui va la contraseña para app de terceros
+spring.mail.username=yisus.00211@gmail.com
+spring.mail.password=zdak gbyv glzu mqgr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
