--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=DISHPLANET
 
-spring.datasource.url=jdbc:mysql://mysqlPlato:3306/mydb
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://mysqlPlato:3306/mydb
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.h2.console.enabled=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
