--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.application.name=DISHPLANET
 
-#spring.datasource.url=jdbc:mysql://mysqlPlato:3306/mydb
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://mysqlPlato:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -21,8 +18,8 @@ uploads.directory=/uploads/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=yisus.00211@gmail.com
-spring.mail.password=zdak gbyv glzu mqgr
+spring.mail.username=sssss
+spring.mail.password=sssss
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
