--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
 
 spring.h2.console.enabled=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -18,8 +18,8 @@ uploads.directory=/uploads/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sssss
-spring.mail.password=sssss
+spring.mail.username=aqui va un email
+spring.mail.password=aqui una contraseña de aplicacion para terceros
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
