--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,7 @@ spring.datasource.url=jdbc:mysql://mysqlPlato:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=root
 
-
 spring.jpa.hibernate.ddl-auto=none
-
 
 spring.h2.console.enabled=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -15,11 +13,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
 uploads.directory=/uploads/
+#uploads.directory=uploads/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=aqui va un email
-spring.mail.password=aqui una contraseña de aplicacion para terceros
+spring.mail.username=yisus.00211@gmail.com
+spring.mail.password=zdak gbyv glzu mqgr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
